# verbosum

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.hs  flake.nix  test.hs  verbosum.cabal
exe/: Main.hs
src/: Verbosum.hs
src/Verbosum/: CLI.hs  Claude.hs  Filler.hs  GHC.hs  Parser.hs  Types.hs
