cabal-version: 3.0
name: verbosum
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Armando Ramirez
maintainer: armando.m.ramirez@gmail.com
-- copyright:
category: AI
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: MyLib
  -- other-modules:
  -- other-extensions:
  build-depends: base ^>=4.20.2.0
  hs-source-dirs: src
  default-language: GHC2024

executable verbosum
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base ^>=4.20.2.0,
    verbosum,

  hs-source-dirs: exe
  default-language: GHC2024

test-suite verbosum-test
  import: warnings
  default-language: GHC2024
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.20.2.0,
    verbosum,
