cabal-version: 3.0
name: verbosum
version: 0.1.0.0
synopsis: AI-powered typed hole filler for Haskell
description:
  Verbosum is a CLI tool that uses the Claude API to automatically fill
  typed holes in Haskell code. Users leave @_holes@ in their code with
  optional @{- CLEARLY ... -}@ directive comments, then run @verbosum [FILE...]@
  to have an LLM fill them based on types, context, and instructions.

license: BSD-3-Clause
license-file: LICENSE
author: Armando Ramirez
maintainer: armando.m.ramirez@gmail.com
category: AI
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Verbosum
    Verbosum.CLI
    Verbosum.Claude
    Verbosum.Filler
    Verbosum.GHC
    Verbosum.Parser
    Verbosum.Types

  build-depends:
    aeson,
    base ^>=4.20.2.0,
    bytestring,
    claude,
    containers,
    directory,
    filepath,
    optparse-applicative,
    process,
    text,
    vector,

  hs-source-dirs: src
  default-language: GHC2024

executable verbosum
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.20.2.0,
    verbosum,

  hs-source-dirs: exe
  default-language: GHC2024

test-suite verbosum-test
  import: warnings
  default-language: GHC2024
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.20.2.0,
    verbosum,
